# mmv3-physics-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: defaultbin  testbin
src/: car_physics.rs  car_type.rs  console.rs  data_service.rs  default_data_service.rs  gui.rs  image.rs  language.rs  main.rs  template.rs  track.rs
src/ui/: app.js  index.html  style.css
