[package]
name = "mmv3_physics_editor"
version = "0.1.0"
authors = ["Alex Jones <alexander.jones@softwire.com>"]
edition = "2018"

[dependencies]
strum = "0.15.0"
strum_macros = "0.15.0"
byteorder = "1.3.2"
base64 = "0.11.0"
web-view = { path = "../web-view", features=["edge"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
winapi = { version = "0.3.7", features = [ "shellscalingapi", "consoleapi", "wincon" ] }

[build-dependencies]
winres = "0.1.11"